<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navSitios">

    <fragment
        android:id="@+id/navSitios"
        android:name="com.jorgeprieto.turistadroidjorgechema.ui.home.MisSitiosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_missitios" />

    <fragment
        android:id="@+id/navPerfil"
        android:name="com.jorgeprieto.turistadroidjorgechema.ui.gallery.MiPerfilFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_miperfil" />

    <fragment
        android:id="@+id/navCerca"
        android:name="com.jorgeprieto.turistadroidjorgechema.ui.cercaDeMi.CercaDeMiFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_cercademi" />
</navigation>