<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity" android:background="@color/ColorAzulPrincipal">

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="200dp" android:layout_width="200dp" android:layout_marginTop="50dp"
            android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
            android:src="@drawable/usuarioimagen" android:id="@+id/circleImageView"/>
    <TextView
            android:text="@string/txtInicioDeSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/lblInicio"
            android:layout_marginTop="38dp" app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            android:textSize="30sp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtContrasena"
            android:hint="@string/txtContrasena" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreDeUsu" android:background="@android:color/background_light"
            android:paddingHorizontal="10dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtNombreDeUsu"
            android:hint="@string/txtNombreDeUsuario" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/lblInicio" android:background="@android:color/background_light"
            android:paddingHorizontal="10dp"/>
    <Button
            android:text="@string/txtLogin"
            android:layout_width="200dp"
            android:layout_height="60dp" android:id="@+id/btnGuardar"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtContrasena"
            android:background="@color/ColorAmarilloPrincipal" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp" android:textSize="20sp"/>

    <TextView
            android:text="@string/txtNoCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginTop="70dp" app:layout_constraintTop_toBottomOf="@+id/btnGuardar"
            app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textSize="18sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblRegistro"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="28dp"
            app:layout_constraintTop_toBottomOf="@+id/btnGuardar" android:layout_marginTop="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:textSize="18sp" android:text="@string/txtRegistroGratis" app:layout_constraintVertical_bias="0.51"/>
</androidx.constraintlayout.widget.ConstraintLayout>