<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity" android:background="@color/ColorAzulPrincipal">

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="200dp" android:layout_width="200dp" android:layout_marginTop="50dp"
            android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
            android:src="@drawable/usuarioimagen" android:id="@+id/circleImageView"/>
    <TextView
            android:text="@string/txtRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/lblInicio"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            android:textSize="24sp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblInicio" android:layout_marginTop="20dp"
            android:background="@android:color/background_light"
            android:paddingHorizontal="10dp" android:hint="@string/txtNombre"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="@android:color/background_light"
            android:paddingHorizontal="10dp" android:hint="@string/txtEmail"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtContrasena"
            android:hint="@string/txtContrasena" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreUsu" android:background="@android:color/background_light"
            android:paddingHorizontal="10dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtNombreUsu"
            android:hint="@string/txtNombreDeUsuario"
            android:background="@android:color/background_light"
            android:paddingHorizontal="10dp"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>
    <Button
            android:text="@string/txtRegistro"
            android:layout_width="200dp"
            android:layout_height="60dp" android:id="@+id/btnRegistro"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtContrasena"
            android:background="@color/ColorAmarilloPrincipal" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp" android:textSize="20sp" app:layout_constraintVertical_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>